--- a/package.json
+++ b/package.json
@@ -4,9 +4,29 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./src/app.js",
+    "dev": "nodemon ./src/app.js",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "mysql2": "^3.7.0",
+    "sequelize": "^6.35.2",
+    "sequelize-cli": "^6.6.2"
+  },
+  "devDependencies": {
+    "chalk": "^4.1.2",
+    "jest": "^29.7.0",
+    "jest-watch-typeahead": "^2.2.2",
+    "moment": "^2.30.1",
+    "nodemon": "^3.0.2",
+    "supertest": "^6.3.3"
+  }
 }
