--- a/src/database/config/config.json
+++ b/src/database/config/config.json
@@ -2,22 +2,23 @@
   "development": {
     "username": "root",
     "password": null,
-    "database": "nodejs",
+    "database": "inventario_dev",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
   "test": {
     "username": "root",
     "password": null,
-    "database": "nodejs",
+    "database": "inventario_test",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
   "production": {
     "username": "root",
     "password": null,
-    "database": "nodejs",
+    "database": "inventario",
     "host": "127.0.0.1",
-    "dialect": "mysql"
+    "dialect": "mysql",
+    "logging": false
   }
 }
